依赖更新，处理兼容性问题